# system_k.dev

./: .gitignore  Makefile.am  README  README.md  TEST  configure.ac
aggregated_book/: Makefile  aggregated_book.cpp  aggregated_book.h  config.ini  main.cpp  main2.cpp  symbols.txt
aggregated_book/test/: Makefile  test_unrolls.cpp
collect-fix/: Application.cpp  Application.h  EURNOK.cfg  Makefile  collect.ADSS.dev.sh  collect.FXCM.dev.sh  collect.FXCM.prod.sh  collect.XCDE.dev.sh  collect.XCDE.prod.sh  collect.cpp  symbols.cfg
collect-fix/.deps/: Application.Po
collect-fix/cfg/: ADSS.dev.cfg  CAPK.dev.cfg  FAST.dev.cfg  FXAL.dev.cfg  spec  (+8 more)
collect-hotspot/: ExpandableRingBuffer.h  Makefile  Session.cpp
collect-itch/: Logging.h  Makefile  Makefile.orig  libitch.kdev4  symbols.conf
configuration_server/: Makefile  configuration_server.py  dev_venues.cfg  kill_config_daemon.sh  test.cfg  tick_subscribe.py
docs/: About System K - pj edits June 22, 2013.docx  About System K.docx  Getting started with System K.txt  Notes.docx  getting_started.txt  install_log.txt  system_k-architecture.pptx  system_kr-architecture.pptx
exchange/: .gitignore  Application.cpp  Application.h  FIXConvertorsTest.cpp  KFixFields.h  MP.cpp  Makefile  Makefile.bak  Makefile.in  MsgDispatcher.cpp  MsgDispatcher.h  MsgPump.cpp  MsgPump.h  MsgPumpTest  MsgPumpTest.cpp  MsgPumpTest.sh  SessionInfo.cpp  SessionInfo.h  SessionInfoTest.cpp  exchange.cfg  executor.cpp  msg_dispatcher.cpp  msg_pump.h  session_info.h
market_data/collect-fix/: Application.cpp  Application.h  Makefile  Makefile.am  autogen.sh  collect.ADSS.dev.sh  collect.CAPK.dev.sh  collect.FAST.dev.sh  collect.FXCM.dev.sh  collect.GAIN.dev.sh  collect.XCDE.dev.sh  collect.cpp  configure  configure.ac  md_fix.cpp  md_parser_qf.cpp  md_parser_qf.h
market_data/collect-fix/.deps/: mdtest.Po
market_data/collect-fix/cfg/: ADSS.dev.cfg  CAPK.dev.cfg  FAST.dev.cfg  FXCM.dev.cfg  FXCM.prod.cfg  GAIN.dev.cfg  XCDE.dev.cfg  XCUR.dev.cfg  cfg  symbols.CROSS.cfg  symbols.FAST.cfg  symbols.XCDE.cfg
market_data/collect-fix/scripts/: collect.FAST.dev.sh  collect.FXCM.dev.sh  collect.XCDE.dev.sh
market_data/collect-fix/spec/: FXALL-FIX43.xml.bak  GAIN-FIX43.xml
order-fix/: .MsgProcessorTestCli.cpp.swp  Application.cpp  Application.h  ClientMarketDataInterface.cpp  ClientOrderInterface.cpp  ClientOrderInterface.h  KMessageMap.h  KMsgCache.h  KMsgHandler.cpp.bak  KMsgHandler.h  KMsgProcessor.cpp  KMsgProcessor.cpp.bak  KMsgProcessor.h  KMsgRouter.cpp  KMsgRouter.cpp.20120319-before_cache  KMsgRouter.h  KMsgTypes.h  KOrderState.h  Makefile  MarketDataMux.cpp  MarketDataMux.h  MsgProcessorTestCli.20120501.cpp  MsgProcessorTestCli.cpp  MsgProcessorTestCli.cpp.bak  MsgProcessorTestCli.nothread.cpp  MsgProcessorTestSvr.cpp  NullOrderInterface.h  ORDER_NOTES.txt  Order.cpp  Order.h  OrderInterface.h  OrderMux.cpp  OrderMux.h  StubHandler.h  application.cpp  application.h  book_types.h  cache_test.cpp  client_market_data_interface.cpp  client_market_data_interface.h  (+40 more)
order-ouch/: README
order_book/: KBBO.h  KBook.cpp  KBook.h  KLimit.cpp  KLimit.h  KOrder.cpp  KOrder.h  KOrderBook.cpp  KOrderBook.h  KPriceDepthOrderBook.cpp  KPriceDepthOrderBook.h  KTypes.h  Makefile  Makefile.am  Makefile.book2  Makefile.in  OrderBookEntry.cpp  OrderBookEntry.h  PriceDepthEntry.cpp  PriceDepthEntry.h  book_tests.cpp  book_tests2.cpp  config.h.in~  configure  configure.ac  convertortest  convertortest.cpp  hashId.cpp  make.convertortest.sh  make.hashId.sh  make.ts2fix.sh  ts2fix  ts2fix.cpp
order_book/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
order_book/include/: book_types.h  limit.h  order.h  order_book.h
order_book/order_book.v1/: Makefile  order_book.cpp  order_book_entry.cpp  order_book_entry.h  price_depth_entry.cpp  price_depth_entry.h  price_depth_order_book.cpp  price_depth_order_book.h
order_book/order_book.v1/test/: Makefile  book_tests.cpp
order_book/order_book.v2/: Makefile  Makefile.inc  book_types.h  limit.cpp  limit.h  order.cpp  order.h  order_book.cpp  order_book.h
order_book/order_book.v2/test/: Makefile  book_tests2.cpp  unit_test.cpp
order_book/order_book.v3/: Makefile  main.cpp  order_book.c  order_book.cpp  order_book.h  order_book.hxx
order_book/order_book.v3/test/: Makefile  gtest_add.cpp  gtest_book.cpp
order_book/order_book.v3/tests/: Makefile  gtest_add.cpp  test_book.c
order_book/src/: limit.cpp  order.cpp  order_book.cpp
order_book/test/: Makefile  Makefile.in  perf_test  perf_test.cpp  unit_test
order_book/tests/: Makefile  book_tests2.cpp  test_convertor.cpp  test_hash_id.cpp  test_timespec_to_fix.cpp
order_books/: Makefile
proto/: Makefile  Makefile.inc  capk_globals.proto  execution_ack.proto  execution_report.proto  interactive_brokers.proto  new_order_single.proto  order_cancel.proto  order_cancel_replace.proto  order_status.proto  position.proto  recovered_orders.proto  spot_fx_md_1.pb.cc  spot_fx_md_1.pb.h  spot_fx_md_1.proto  venue_configuration.proto
replay_server/: exchange.cfg  msg_dispatcher.h  msg_pump.cpp  session_info.cpp
scripts/: MoveDay.sh  MoveTickData.sh  ZipMoveTickData.sh  ZipMoveTickDataS3.sh  cpplint.py  test.sh
trade_serializer/: Makefile  README.txt  create_schema.sh  grants.sql  schema.sql  trade_listener.cpp  trade_serializer.cpp
utils/: FIXConvertors.cpp  FIXConvertors.h  KTimeUtils.cpp  KTimeUtils.h  KTypes.h  KTypes.h.bak  Makefile  aggregated_bbo_book.h  bbo_book_types.h  config_server.h  constants.h  fix_convertors.cpp  fix_convertors.h  hash.cpp  logging.cpp  logging.h  time_utils.cpp  time_utils.h  timing.h  types.h  uuidgen.make  venue_globals.h  venue_utils.cpp  venue_utils.h  zhelpers.h  zhelpers.hpp  zmq_version.make
validate_symbols/: Application.cpp  Application.h  Makefile  XCDE.symbols  collect.GAIN.dev.sh  test_symbols.cfg  validate.FAST.dev.sh  validate.FXCM.dev.sh  validate.FXCM.prod.sh  validate.GAIN.dev.sh  validate.XCDE.dev.sh  validate.XCDE.prod.sh  validate_symbols  validate_symbols.cpp
(+285 files in other folders)
